<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AgriNews</string>
    <string name="nav_header_subtitle">News app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="app_name">AgriNews</string>
    <string name="news_header">News header</string>
    <string name="news_content">News content</string>
    <string name="menu_news">News</string>
    <string name="menu_settings">Settings</string>
    <string name="news_link">News link</string>
    <string name="settings_rss_url" translatable="false">RSS URL</string>
    <string name="settings_add">Add</string>
    <string name="settings_delete">Delete</string>
    <string name="settings_manage_rss_links">Manage RSS links</string>
    <string name="settings_manage_keywords">Manage keywords</string>
    <string name="settings_keyword">Keyword</string>
    <string name="settings_enable_notifications">Enable notifications</string>
    <string name="settings_current_time">Current time</string>
    <string name="settings_change_time">Change time</string>
    <string name="settings_rss_links_summary">Add and delete RSS links that you want to parse</string>
    <string name="settings_keywords_summary">News without keywords will not be shown</string>
    <string name="settings_notifications">notifications</string>
    <string name="settings_notifications_summary">Enable news notifications</string>
    <string name="settings_time_summary">Change the time at which notifications will be displayed</string>

    <string name="notification_title">News</string>
    <string name="notification_content">New selection of news!</string>
    <string name="empty_news_list">You must add a link to the RSS feed in the settings</string>
    <string name="settings_category">Category</string>
    <string name="settings_manage_categories">Manage categories</string>
    <string name="settings_categories_summary">News only with this categories will be shown</string>
</resources>