<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/detail_news_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/news_header" />

        <TextView
            android:id="@+id/detail_news_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/detail_news_header"
            android:textSize="20sp"
            android:autoLink="web"
            android:text="@string/news_content" />

        <TextView
            android:id="@+id/detail_news_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/detail_news_content"
            android:textSize="15sp"
            android:autoLink="web"
            android:text="@string/news_link" />
    </RelativeLayout>

</ScrollView>
